[project]
name = "bula-project"
version = "0.1.0"
description = "Adaptive ML-based DDoS detection and mitigation system with SDN"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.0.3",
    "numpy==1.24.4",
    "scikit-learn==1.3.2",
    "imbalanced-learn==0.11.0",
    "xgboost==1.7.6",
    "streamlit==1.30.0",
    "matplotlib==3.7.4",
    "seaborn==0.12.2",
    "joblib==1.3.2",
    "streamlit-autorefresh>=1.0.1",
]
